fixed spacing  on avatar and logo in header

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -15,4 +15,9 @@
 
 .header .navbar-brand img {
   width: 100px;
+  margin-left: 4px;
+}
+
+.header .avatar{
+  margin-right: 4px;
 }
